Corrected warnings.